--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.0",
     "socket.io-client": "^4.4.1",
     "typescript": "^4.6.3",
+    "warning": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
-    "@types/socket.io-client": "^3.0.0"
+    "@types/socket.io-client": "^3.0.0",
+    "@types/warning": "^3.0.0"
   }
 }
