--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-error-boundary": "^3.1.4",
     "react-scripts": "5.0.0",
     "socket.io-client": "^4.4.1",
     "typescript": "^4.6.3",
